Update GitHub username

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
     </div>
   </main>
   <footer class="text-center d-flex flex-column justify-center align-items-center">
-    <p>Made with ❤ by <a href="https://bjornlu.netlify.com">Bjorn Lu</a></p>
+    <p>Made with ❤ by <a href="https://bjornlu.com">Bjorn Lu</a></p>
     <p>
-      <a href="https://github.com/BjornLuG">GitHub</a>
+      <a href="https://github.com/bluwy">GitHub</a>
       •
       <a href="https://reddit.com/u/IamLUG">Reddit</a>
       •
